// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`internal page nav renders a page with next and previous links correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding-bottom: 2.5em;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-column-gap: 16px;
  column-gap: 16px;
  margin-top: 88px;
}

@media only screen and (max-width: 480px) {
  .emotion-0 {
    -webkit-flex-direction: column-reverse;
    -ms-flex-direction: column-reverse;
    flex-direction: column-reverse;
    row-gap: 64px;
    margin-top: 66px;
  }
}

@media print {
  .emotion-0 {
    display: none;
  }
}

.emotion-0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="emotion-0"
  />
  ,
</DocumentFragment>
`;

exports[`internal page nav renders a page with no next link correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding-bottom: 2.5em;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-column-gap: 16px;
  column-gap: 16px;
  margin-top: 88px;
}

@media only screen and (max-width: 480px) {
  .emotion-0 {
    -webkit-flex-direction: column-reverse;
    -ms-flex-direction: column-reverse;
    flex-direction: column-reverse;
    row-gap: 64px;
    margin-top: 66px;
  }
}

@media print {
  .emotion-0 {
    display: none;
  }
}

.emotion-0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1 {
  margin-right: auto;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-column-gap: 14px;
  column-gap: 14px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 1px solid transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  z-index: 0;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  border-radius: 6px;
  background-color: #F9FBFA;
  border-color: #889397;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  font-weight: 500;
  height: 36px;
  width: 52px;
  height: 48px;
  background-color: #F9FBFA;
  color: #001E2B;
}

.emotion-3:focus-visible,
.emotion-3[data-focus="true"] {
  outline: none;
}

.emotion-3:active,
.emotion-3[data-active="true"],
.emotion-3:focus,
.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3:focus-visible,
.emotion-3[data-focus="true"] {
  color: #001E2B;
}

.emotion-3:hover,
.emotion-3[data-hover="true"],
.emotion-3:active,
.emotion-3[data-active="true"] {
  color: #001E2B;
  background-color: #FFFFFF;
  box-shadow: 0 0 0 3px #E8EDEB;
}

.emotion-3:focus-visible,
.emotion-3[data-focus="true"] {
  background-color: #FFFFFF;
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
}

@media not all and (max-width: 767px) {
  .emotion-3 {
    width: 40px;
    height: 36px;
  }
}

.dark-theme .emotion-3 {
  background-color: #3D4F58;
  color: #FFFFFF;
}

.emotion-4 {
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 5px;
}

.emotion-5 {
  display: grid;
  grid-auto-flow: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  z-index: 0;
  -webkit-transition: all 150 ease-in-out;
  transition: all 150 ease-in-out;
  padding: 0 11px;
  gap: 6px;
}

.emotion-6 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-7 {
  text-align: start;
}

.emotion-8 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  font-size: 13px;
  line-height: 20px;
  font-weight: 500;
  color: var(--font-color-primary);
}

.emotion-8 strong,
.emotion-8 b {
  font-weight: 600;
}

.emotion-9 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  font-size: 13px;
  line-height: 20px;
  color: #889397;
}

.emotion-9 strong,
.emotion-9 b {
  font-weight: 600;
}

.dark-theme .emotion-9 {
  color: #C1C7C6;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <a
        href="/docs/atlas/reference/user-roles"
        title="Previous Section"
      >
        <div
          class="emotion-2"
        >
          <button
            aria-disabled="false"
            class="lg-ui-button-0000 emotion-3"
            data-lgid="lg-button"
            type="button"
          >
            <div
              class="emotion-4"
            />
            <div
              class="emotion-5"
            >
              <svg
                aria-label="Arrow Left Icon"
                class="emotion-6"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M13 6.83212L6.05559 6.83212L7.59059 5.29711C7.98112 4.90659 7.98112 4.27342 7.59059 3.8829L7.35168 3.64398C6.96115 3.25346 6.32799 3.25345 5.93746 3.64398L2.55483 7.02661C2.5456 7.03518 2.5365 7.04395 2.52752 7.05292L2.2886 7.29184C1.89808 7.68237 1.89808 8.31553 2.2886 8.70605L5.93975 12.3572C6.33028 12.7477 6.96344 12.7477 7.35397 12.3572L7.59288 12.1183C7.98341 11.7278 7.98341 11.0946 7.59288 10.7041L6.0588 9.17L13 9.17C13.5523 9.17 14 8.72228 14 8.17V7.83212C14 7.27983 13.5523 6.83212 13 6.83212Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </button>
          <div
            class="emotion-7"
          >
            <p
              class="emotion-8"
            >
              Back
            </p>
            <p
              class="emotion-9"
            >
              Atlas User Roles
            </p>
          </div>
        </div>
      </a>
    </div>
  </div>
  ,
</DocumentFragment>
`;

exports[`internal page nav renders a page with no previous link correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding-bottom: 2.5em;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-column-gap: 16px;
  column-gap: 16px;
  margin-top: 88px;
}

@media only screen and (max-width: 480px) {
  .emotion-0 {
    -webkit-flex-direction: column-reverse;
    -ms-flex-direction: column-reverse;
    flex-direction: column-reverse;
    row-gap: 64px;
    margin-top: 66px;
  }
}

@media print {
  .emotion-0 {
    display: none;
  }
}

.emotion-0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1 {
  margin-right: auto;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-column-gap: 14px;
  column-gap: 14px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 1px solid transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  z-index: 0;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  border-radius: 6px;
  background-color: #F9FBFA;
  border-color: #889397;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  font-weight: 500;
  height: 36px;
  width: 52px;
  height: 48px;
  background-color: #F9FBFA;
  color: #001E2B;
}

.emotion-3:focus-visible,
.emotion-3[data-focus="true"] {
  outline: none;
}

.emotion-3:active,
.emotion-3[data-active="true"],
.emotion-3:focus,
.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3:focus-visible,
.emotion-3[data-focus="true"] {
  color: #001E2B;
}

.emotion-3:hover,
.emotion-3[data-hover="true"],
.emotion-3:active,
.emotion-3[data-active="true"] {
  color: #001E2B;
  background-color: #FFFFFF;
  box-shadow: 0 0 0 3px #E8EDEB;
}

.emotion-3:focus-visible,
.emotion-3[data-focus="true"] {
  background-color: #FFFFFF;
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
}

@media not all and (max-width: 767px) {
  .emotion-3 {
    width: 40px;
    height: 36px;
  }
}

.dark-theme .emotion-3 {
  background-color: #3D4F58;
  color: #FFFFFF;
}

.emotion-4 {
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 5px;
}

.emotion-5 {
  display: grid;
  grid-auto-flow: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  z-index: 0;
  -webkit-transition: all 150 ease-in-out;
  transition: all 150 ease-in-out;
  padding: 0 11px;
  gap: 6px;
}

.emotion-6 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-7 {
  text-align: start;
}

.emotion-8 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  font-size: 13px;
  line-height: 20px;
  font-weight: 500;
  color: var(--font-color-primary);
}

.emotion-8 strong,
.emotion-8 b {
  font-weight: 600;
}

.emotion-9 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  font-size: 13px;
  line-height: 20px;
  color: #889397;
}

.emotion-9 strong,
.emotion-9 b {
  font-weight: 600;
}

.dark-theme .emotion-9 {
  color: #C1C7C6;
}

.emotion-10 {
  margin-left: auto;
}

.emotion-11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-column-gap: 14px;
  column-gap: 14px;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-16 {
  text-align: end;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <a
        href="/docs/atlas"
        title="Previous Section"
      >
        <div
          class="emotion-2"
        >
          <button
            aria-disabled="false"
            class="lg-ui-button-0000 emotion-3"
            data-lgid="lg-button"
            type="button"
          >
            <div
              class="emotion-4"
            />
            <div
              class="emotion-5"
            >
              <svg
                aria-label="Arrow Left Icon"
                class="emotion-6"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M13 6.83212L6.05559 6.83212L7.59059 5.29711C7.98112 4.90659 7.98112 4.27342 7.59059 3.8829L7.35168 3.64398C6.96115 3.25346 6.32799 3.25345 5.93746 3.64398L2.55483 7.02661C2.5456 7.03518 2.5365 7.04395 2.52752 7.05292L2.2886 7.29184C1.89808 7.68237 1.89808 8.31553 2.2886 8.70605L5.93975 12.3572C6.33028 12.7477 6.96344 12.7477 7.35397 12.3572L7.59288 12.1183C7.98341 11.7278 7.98341 11.0946 7.59288 10.7041L6.0588 9.17L13 9.17C13.5523 9.17 14 8.72228 14 8.17V7.83212C14 7.27983 13.5523 6.83212 13 6.83212Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </button>
          <div
            class="emotion-7"
          >
            <p
              class="emotion-8"
            >
              Back
            </p>
            <p
              class="emotion-9"
            >
              Overview
            </p>
          </div>
        </div>
      </a>
    </div>
    <div
      class="emotion-10"
    >
      <a
        href="/docs/atlas/reference/user-roles"
        title="Next Section"
      >
        <div
          class="emotion-11"
        >
          <button
            aria-disabled="false"
            class="lg-ui-button-0000 emotion-3"
            data-lgid="lg-button"
            type="button"
          >
            <div
              class="emotion-4"
            />
            <div
              class="emotion-5"
            >
              <svg
                aria-label="Arrow Right Icon"
                class="emotion-6"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M3 6.83212L9.94442 6.83212L8.40941 5.29711C8.01888 4.90659 8.01889 4.27342 8.40941 3.8829L8.64833 3.64398C9.03885 3.25346 9.67201 3.25345 10.0625 3.64398L13.4452 7.02661C13.4544 7.03518 13.4635 7.04395 13.4725 7.05292L13.7114 7.29184C14.1019 7.68237 14.1019 8.31553 13.7114 8.70605L10.0602 12.3572C9.66972 12.7477 9.03656 12.7477 8.64603 12.3572L8.40712 12.1183C8.01659 11.7278 8.01659 11.0946 8.40712 10.7041L9.9412 9.17L3 9.17C2.44771 9.17 2 8.72228 2 8.17L2 7.83212C2 7.27983 2.44772 6.83212 3 6.83212Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </button>
          <div
            class="emotion-16"
          >
            <p
              class="emotion-8"
            >
              Next
            </p>
            <p
              class="emotion-9"
            >
              Atlas User Roles
            </p>
          </div>
        </div>
      </a>
    </div>
  </div>
  ,
</DocumentFragment>
`;
